--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,7 +71,7 @@ main .imagem-temporada,
   margin-right: 25px;
   max-width: 100%;
   height: auto;
-  border: 1px solid;
+  border: 1px solid black;
 }
 .imagem-temporada-dois {
   height: 400px;
